# lsggroup

./: CMakeLists.txt  README.md  main.cpp
google/: CMakeLists.txt  contacts.cpp  contacts.hpp  directory_members.cpp  directory_members.hpp  oauth2.cpp  oauth2.hpp
google/directory/: directory.cpp  directory.hpp  members.cpp  members.hpp
google/utility/: http.hpp  json.hpp
